# pokirobot_soft

./: .ccls  .clang-format  .gitignore  CMakeLists.txt  Kconfig  Makefile  README.md  platformio.ini  prj.conf  west.yml
app/: CMakeLists.txt  Kconfig  control_logs.conf  prj.conf
app/boards/: nucleo_f446re.overlay
app/lib/figurine_lifter/: figurine_lifter.c  figurine_lifter.h
app/lib/kdtree/: kdtree.c  kdtree.h
app/lib/led_pwm/: led_pwm.c  led_pwm.h
app/lib/obstacles/: obstacle.c  obstacle.h
app/lib/pathfinding/: kdtree.c  kdtree.h  pathfinding.c  pathfinding.h  pathfinding_errors.h  pathfinding_types.h
app/lib/pokarm/: pokarm.c  pokarm.h
app/lib/pokibrain/: pokibrain.c  pokibrain.h  user_context.h
app/lib/pokipump/: pokipump.c
app/lib/pokpush/: pokpush.c  pokpush.h
app/lib/pokstick/: pokstick.c  pokstick.h
app/lib/pokutils/: lidar_message.h  robot_utils.c  robot_utils.h
app/lib/servo_pwm/: servo_pwm.c  servo_pwm.h
app/lib/tirette/: tirette.c  tirette.h
app/lib/tmc2209/: tmc2209.c  tmc2209.h
app/lib/uart_hdb/: uart_hdb.c  uart_hdb.h
app/src/: coords.h  global_def.h  main.c  pokutils.c  pokutils.h  shared.c  shared.h  strat.c  utils.c  utils.h
app/src/control/: control.c  control.h
app/src/hmi/: hmi_led.c  hmi_led.h
app/src/nav/: nav.c  nav.h  obstacle_manager.c  obstacle_manager.h  path_manager.c  path_manager.h
app/src/pokuicom/: pokuicom.c  pokuicom.h
app/src/strat/: strat.c  strat.h  strat_interface.c  strat_interface.h
data/: poki.gcode  (+2 more)
pc_app/: CMakeLists.txt  prj.conf
pc_app/src/: main.c  strat_interface.c
(+94 files in other folders)
